<resources>
    <string name="app_name">AndroidMaps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="user_name">User name:</string>
    <string name="note">Note:</string>
    <string name="the_user_name_is_required">* The user name is required</string>
    <string name="the_note_is_required">* The note is required</string>
    <string name="current_location">Current location</string>
    <string name="search_note">Search note</string>
    <string name="search">Search</string>
    <string name="your_keyword">Your keyword</string>
    <string name="gps_confirm_msg">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notes">Notes</string>
</resources>