<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="@drawable/dialog_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/name_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:inputType="text"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/name_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/name_desc"
        app:layout_constraintBottom_toBottomOf="@id/name_desc"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/nameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/the_user_name_is_required"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        android:layout_marginTop="4dp"
        tools:visibility="visible"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/noteDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameError"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:text="@string/note"/>

    <EditText
        android:id="@+id/note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/noteDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/noteDesc"
        app:layout_constraintBottom_toBottomOf="@id/noteDesc"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/noteError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/the_note_is_required"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note"
        android:layout_marginTop="4dp"
        tools:visibility="visible"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>