<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_note"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/search_keyword"
            android:layout_width="0dp"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:hint="@string/your_keyword"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/search_btn"
            android:layout_marginEnd="4dp"/>

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12sp"
            android:text="@string/search"
            android:background="@drawable/dialog_background"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toBottomOf="@id/search_keyword"/>

        <TextView
            android:id="@+id/keyword_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="* The keyword is required"
            android:textStyle="italic"
            android:visibility="gone"
            tools:visibility="visible"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/search_keyword"
            app:layout_constraintStart_toStartOf="@id/search_keyword"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/keyword_error_msg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="4"
            android:minHeight="150dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/search_result_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/search_result"
            app:layout_constraintEnd_toEndOf="@id/search_result"
            app:layout_constraintTop_toTopOf="@id/search_result"
            app:layout_constraintBottom_toBottomOf="@id/search_result"
            android:textStyle="italic"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>